[tool.poetry]
name = "sml-project"
version = "0.1.0"
description = ""
authors = ["ddorn <diego.dorn@free.fr>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.2"
plotly = "^5.18.0"
ipykernel = "^6.26.0"
pandas = "^2.1.3"
jupyter = "^1.0.0"
rich = "^13.7.0"
datasets = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
